[gd_scene load_steps=3 format=3 uid="uid://di70fm6n0x07g"]

[ext_resource type="Script" path="res://Assets/Scripts/menu.gd" id="1_ovjka"]
[ext_resource type="AudioStream" uid="uid://d07pxrtj03gxd" path="res://Assets/music/a_hisa_-_Logical_Stimulus.mp3" id="2_0hjwv"]

[node name="Screen" type="Node2D"]
position = Vector2(10, 115)
script = ExtResource("1_ovjka")

[node name="Menu" type="Panel" parent="."]
offset_left = 438.0
offset_top = -51.0
offset_right = 694.0
offset_bottom = 397.0

[node name="Play" type="Button" parent="Menu"]
layout_mode = 0
offset_left = 64.0
offset_top = 64.0
offset_right = 192.0
offset_bottom = 128.0
text = "Play
"

[node name="Credits" type="Button" parent="Menu"]
layout_mode = 0
offset_left = 64.0
offset_top = 192.0
offset_right = 192.0
offset_bottom = 256.0
text = "Credits"

[node name="Settings" type="Button" parent="Menu"]
layout_mode = 0
offset_left = 64.0
offset_top = 320.0
offset_right = 192.0
offset_bottom = 384.0
text = "Settings
"

[node name="Creditmenu" type="Panel" parent="."]
offset_left = 118.0
offset_top = -11.0
offset_right = 270.0
offset_bottom = 325.0

[node name="RichTextLabel" type="RichTextLabel" parent="Creditmenu"]
layout_mode = 1
anchors_preset = -1
anchor_left = 0.053
anchor_top = 0.024
anchor_right = 0.053
anchor_bottom = 0.024
offset_left = -0.0560007
offset_top = -0.0640001
offset_right = 135.944
offset_bottom = 319.936
text = "Credits:
made by ed"

[node name="Settingmenu" type="Panel" parent="."]
visible = false
offset_left = 886.0
offset_top = 13.0
offset_right = 1110.0
offset_bottom = 349.0

[node name="RichTextLabel" type="RichTextLabel" parent="Settingmenu"]
layout_mode = 1
anchors_preset = -1
anchor_left = 0.053
anchor_top = 0.024
anchor_right = 0.053
anchor_bottom = 0.024
offset_left = 28.128
offset_top = 95.936
offset_right = 164.128
offset_bottom = 159.936
text = "WIP lol"

[node name="End" type="Button" parent="."]
anchors_preset = -1
anchor_left = -0.625
anchor_top = -0.142
anchor_right = -0.625
anchor_bottom = -0.142
offset_left = 1030.0
offset_top = 501.0
offset_right = 1141.0
offset_bottom = 532.0
text = "Exit game
"

[node name="AudioStreamPlayer2D" type="AudioStreamPlayer2D" parent="."]
stream = ExtResource("2_0hjwv")
autoplay = true

[connection signal="pressed" from="Menu/Play" to="." method="_on_play_pressed"]
[connection signal="pressed" from="Menu/Credits" to="." method="_on_credits_pressed"]
[connection signal="pressed" from="Menu/Settings" to="." method="_on_settings_pressed"]
[connection signal="pressed" from="End" to="." method="_on_end_pressed"]
